# pmr

./: .gitignore  README.md  _build_gold.py  article.tex  pmr_benchmark.jsonl  pmr_gold.jsonl  score_benchmark.py
MetaBotik/: .env.example  .gitignore  README.md  pyproject.toml
MetaBotik/docs/research/: ARTICLE_AGENT_BRIEF.md  EXPERIMENT_RESULTS.md
MetaBotik/prompts/: baseline_minimal.txt  baseline_prompt.txt  baseline_twostage_packager.md  baseline_twostage_solve.txt
MetaBotik/prompts/system/: core_system_prompt.md
MetaBotik/prompts/validators/: schema_repair.txt
MetaBotik/scripts/: regen_pmr_result_bundles.py  run_pipeline.sh
MetaBotik/src/: __init__.py
MetaBotik/src/application/: __init__.py  eval_usecase.py  judge_usecase.py  pipeline_usecase.py  run_usecase.py
MetaBotik/src/cli/: __init__.py  _logging.py  app.py
MetaBotik/src/domain/: enums.py  schemas.py
MetaBotik/src/evaluation/: __init__.py  compare.py  element_coverage.py  judge_prompt.py  llm_semantic_judge.py  llm_semantic_judge_v2.py  paired_stats.py  procedural_metrics.py  quality_judge.py  rubric_scorer.py
MetaBotik/src/formatting/: json_formatter.py  markdown_formatter.py
MetaBotik/src/infrastructure/: __init__.py  repo.py  run_dir.py
MetaBotik/src/llm/: client.py  settings.py
MetaBotik/src/parsing/: exceptions.py  parser.py  repair.py  sanitize.py  validators.py
MetaBotik/src/planning/: heuristics.py  planner.py
MetaBotik/src/prompting/: __init__.py  prompt_builder.py  strategies.py  templates.py
MetaBotik/suites/: __init__.py  protocol.py
MetaBotik/tests/: conftest.py
(+76 files in other folders)
