[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metabotik"
version = "0.2.0"
description = "Procedural Meta-Reflection (PMR / MKPI 4.3) benchmark + agent pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "openai>=1.50.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "ruff>=0.4.0",
]

[project.scripts]
metabotik = "src.cli.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "suites*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["src", "suites"]
